fix: should not have extra space

--- a/app/views/info.scss
+++ b/app/views/info.scss
@@ -11,4 +11,7 @@
     padding-bottom: 32px;
     text-align: center;
   }
+  .row{
+    margin: 0;
+  }
 }
